examples/semantics/errors/error26.grace
fun error21 () : nothing
	fun foo(): nothing
	{
		puti(8);
	}
	var foo:int;
{
	foo();
}
